nev update and fix

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -23,7 +23,7 @@
   nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 180px;
+    padding: 50px 180px;
   }
 
    nav ul{
